<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#252525"
    tools:context=".MainActivity" >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" >
        <Button
            android:id="@+id/messages_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Button"
            android:layout_gravity="left"/>
        <Button
            android:id="@+id/profile_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Button"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/settings_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Button"
            android:layout_gravity="right"/>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/first_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:scaleType="fitCenter"
                android:text="This is a test"
                android:textColor="#FFFFFF" />

            <ImageView
                android:id="@+id/black_tusk"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:layout_marginTop="10dp"
                android:src="@drawable/black_tusk"></ImageView>

            <TextView
                android:id="@+id/second_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:scaleType="fitCenter"
                android:text="More Test"
                android:textColor="#FFFFFF" />

            <ImageView
                android:id="@+id/garibaldi_glacier"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:layout_marginTop="10dp"
                android:src="@drawable/garibaldi_glacier"></ImageView>

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_weight="0"
        android:text="@string/user_name"
        android:textAlignment="center"
        android:textColor="#673AB7"
        android:textSize="45sp" />

    <TextView
        android:id="@+id/user_info"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_weight="0"
        android:text="@string/user_info"
        android:textAlignment="center"
        android:textColor="#673AB7"
        android:textSize="23sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/dislike_btn"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/dislike_btn"
            android:layout_weight="1"
            android:layout_gravity="left"/>

        <Button
            android:id="@+id/like_btn"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="right"
            android:text="@string/like_btn"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>

