<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/gradient_box"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@drawable/purple_grad">

        <RelativeLayout
            android:id="@+id/profile_icon_layout"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:background="@drawable/circle_border">

            <ImageView
                android:id="@+id/profile_icon"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:adjustViewBounds="true"
                android:layout_margin="9dp"
                android:padding="3dp"
                android:scaleType="centerInside"
                android:background="@drawable/black_circle"
                android:src="@drawable/circle"/>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_icon_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:text="@string/new_user"
            android:fontFamily="sans-serif-medium"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/match_playlist_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gradient_box"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="@color/colorPrimaryLight"
            android:layout_weight="1"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="25sp"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-medium"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="MATCHES"
                    android:textSize="13sp"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-medium"/>

            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="@color/colorPrimary"
            android:layout_weight="1"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="25sp"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-medium"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="PLAYLISTS"
                    android:textSize="13sp"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-medium"/>

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/profile_info_body"
        android:layout_below="@id/match_playlist_row"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="15sp"
                    android:textColor="@color/colorPrimary"/>

                <EditText
                    android:id="@+id/enter_username"
                    android:hint="@string/enter_name"
                    android:background="@android:color/transparent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textSize="19sp"
                    android:autofillHints="Name" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/light_gray"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fave_art"
                    android:textSize="15sp"
                    android:textColor="@color/colorPrimary"/>

                <EditText
                    android:id="@+id/enter_favourite_artist"
                    android:hint="@string/enter_fave_art"
                    android:background="@android:color/transparent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textSize="19sp"
                    android:autofillHints="Artist"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/light_gray"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/colour"
                    android:textSize="15sp"
                    android:textColor="@color/colorPrimary"/>

                <Button
                    android:id="@+id/enter_colour"
                    android:background="@android:color/transparent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_colour"
                    android:textColor="@color/gray"
                    android:textSize="19sp"
                    android:autofillHints="Colour" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/light_gray"/>
            </LinearLayout>

            <Button
                android:id="@+id/save_profile"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                android:text="Save \n I am an ugley button please make me look better!"
                android:layout_width="200dp"
                android:layout_height="100dp"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>